--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <!-- end hero -->
 
     <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro" >
         <h2>What We Do</h2>
         <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave
         </p>
     </section>
 
