--- a/index.html
+++ b/index.html
@@ -113,9 +113,45 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers">
-        <h2>Meet The Trainers</h2>
-    </section>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+        <!-- trainer 1 -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis animi est totam, voluptates ullam dicta libero, harum itaque natus magnam possimus fuga cumque voluptatum soluta molestiae sapiente magni impedit accusantium.
+                </p>
+            </div>    
+        </article>
+        <!-- trainer 2 -->
+        <article class="trainer">
+            
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet architecto deleniti repellat temporibus iste repellendus provident? Nisi ab quis ducimus, ad, odio perferendis voluptatibus ut quaerat, tenetur eos maiores!
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill ooling off after a workout " />
+        </article>
+        <!-- trainer 3 -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "The Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora dolorem cumque perferendis recusandae expedita ipsam possimus pariatur eius cupiditate. Enim voluptatem exercitationem a. Excepturi sequi voluptate, molestiae velit incidunt illum!
+                </p>
+            </div>
+        </article>
+    </section>    
 
     <!-- "reach out" section -->
     <section id="reach-out"s>
