--- a/index.html
+++ b/index.html
@@ -163,14 +163,28 @@
     <section id="reach-out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25881.434378076145!2d-87.32148655!3d35.8200764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8863591e27faf6d9%3A0xc5d4433b40339631!2s6500%20Parker%20Rd%2C%20Lyles%2C%20TN%2037098!5e0!3m2!1sen!2sus!4v1613009996407!5m2!1sen!2sus"  
-            frameborder="0" 
-            style="border:0;" 
-            allowfullscreen="" 
-            aria-hidden="false" 
-            tabindex="0">
-            </iframe> 
+            <div class="map">
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25881.434378076145!2d-87.32148655!3d35.8200764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8863591e27faf6d9%3A0xc5d4433b40339631!2s6500%20Parker%20Rd%2C%20Lyles%2C%20TN%2037098!5e0!3m2!1sen!2sus!4v1613009996407!5m2!1sen!2sus"  
+                frameborder="0" 
+                style="border:0;" 
+                allowfullscreen="" 
+                aria-hidden="false" 
+                tabindex="0">
+                </iframe> 
+            </div>
+            <div class="contact-form">
+                <h3>Contact Us</h3>
+                <form>
+                    <label for="contact-name">Your Name</label>    
+                    <input type="text" placeholder="Your Name" id="contact-name" />
+
+                    <label for="contact-message">Message</label>
+                    <textarea id="contact-message" placeholder="Message"></textarea>
+
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
             <div>        
                 <h3>Run Buddy</h3>
                 <p>
@@ -185,7 +199,7 @@
                     P: 555.RUN.BUDZ (555.786.2839)<br />
                     E: <a href="mailtto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
-            </div>
+            </div>  
         </div>
     </section>
 
