add flexbox utility class

--- a/index.html
+++ b/index.html
@@ -83,16 +83,25 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro" >
-        <h2 class="section-title primary-border">What We Do</h2>
-        <p>
-            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave
-        </p>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave
+           </p>
+        </div>   
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
-
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">
+                What You Do
+            </h2>
+        </div>    
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
             <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -120,9 +129,11 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">
-            Meet The Trainers
-        </h2>
+        <div class="flex-box">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+        </div>
         <!-- trainer 1 -->
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
@@ -161,7 +172,11 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="flex-box">
+            <h2 class="section-title secondary-border">
+                Reach Out
+            </h2>
+        </div>
         <div class="contact-info">
             <div class="map">
                 <iframe
