--- a/index.html
+++ b/index.html
@@ -156,46 +156,47 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <div class="flex-box">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
         </div>
-        <!-- trainer 1 -->
-        <article class="trainer">
-            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed / Strength</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis animi est totam, voluptates ullam dicta libero, harum itaque natus magnam possimus fuga cumque voluptatum soluta molestiae sapiente magni impedit accusantium.
-                </p>
-            </div>    
-        </article>
-        <!-- trainer 2 -->
-        <article class="trainer">
-            
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet architecto deleniti repellat temporibus iste repellendus provident? Nisi ab quis ducimus, ad, odio perferendis voluptatibus ut quaerat, tenetur eos maiores!
-                </p>
-            </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill ooling off after a workout " />
-        </article>
-        <!-- trainer 3 -->
-        <article class="trainer">
-            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "The Headband" Smith</h3>
-                <h4>Strength</h4>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora dolorem cumque perferendis recusandae expedita ipsam possimus pariatur eius cupiditate. Enim voluptatem exercitationem a. Excepturi sequi voluptate, molestiae velit incidunt illum!
-                </p>
-            </div>
-        </article>
+        <div class="trainers">
+            <!-- trainer 1 -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Arron Stephens</h3>
+                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis animi est totam, voluptates ullam dicta libero, harum itaque natus magnam possimus fuga cumque voluptatum soluta molestiae sapiente magni impedit accusantium.
+                    </p>
+                </div>    
+            </article>
+            <!-- trainer 2 -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill ooling off after a workout " />  
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Joanna Gill</h3>
+                    <h4 class="trainer-role">Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae amet architecto deleniti repellat temporibus iste repellendus provident? Nisi ab quis ducimus, ad, odio perferendis voluptatibus ut quaerat, tenetur eos maiores!
+                    </p>
+                </div>
+            </article>
+            <!-- trainer 3 -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio">
+                    <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                    <h4 class="trainer-role">Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora dolorem cumque perferendis recusandae expedita ipsam possimus pariatur eius cupiditate. Enim voluptatem exercitationem a. Excepturi sequi voluptate, molestiae velit incidunt illum!
+                    </p>
+                </div>
+            </article>
+        </div>
     </section>    
 
     <!-- "reach out" section -->
